tests/controller/snapshots/cors_mixed_formats_[specific_origin_variants]_https_example.com@middlewares.snap
---
source: tests/controller/middlewares.rs
expression: "(format!(\"access-control-allow-origin: {:?}\",\nres.headers().get(\"access-control-allow-origin\")),\nformat!(\"vary: {:?}\", res.headers().get(\"vary\")),)"
snapshot_kind: text
---
(
    "access-control-allow-origin: Some(\"https://example.com\")",
    "vary: Some(\"origin, access-control-request-method, access-control-request-headers\")",
)
